Added skeletons for various pages

--- a/src/content/docs/guides/slimes.mdx
+++ b/src/content/docs/guides/slimes.mdx
@@ -1,6 +1,6 @@
 ---
-title: Slimes Guide
-description: Guide to Solving the Wobbliest creatures in the underground.
+title: Slimes
+description: Slimey bois
 ---
 
-Guides lead a user through a specific task they want to accomplish
+WIP
