--- a/src/content/docs/others/credits.mdx
+++ b/src/content/docs/others/credits.mdx
@@ -1,6 +1,6 @@
 ---
 title: Credits
-description: Guide to Solving the Wobbliest creatures in the underground.
+description: Credits to people who contributed and inspired this project
 ---
 
 Tenkay for making ultistrats.com in turn making me want to create this resource
