--- a/src/content/docs/others/discords.mdx
+++ b/src/content/docs/others/discords.mdx
@@ -3,4 +3,9 @@ title: Discords
 description: Reccomended Discords for engaging with Field Operations content
 ---
 
-Guides lead a user through a specific task they want to accomplish
+pebe
+thl
+cafe
+cem
+abba
+dfo
