Updated site structure, improved generarl layout for current and future forays

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: NA Delubrum Savage Guide
+title: NA Field Operations
 description: one stop shop for all things NA Delubrum Savage
 ---
 
