Updated couple of main pages with text. Getting baseline formatting still figured out.

--- a/src/content/docs/drs/overview.mdx
+++ b/src/content/docs/drs/overview.mdx
@@ -3,4 +3,26 @@ title: Delubrum Savage Overview
 description: PeepoPoggers
 ---
 
-WIP
+<link
+  rel="stylesheet"
+  media="(prefers-color-scheme:dark)"
+  href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
+  onload="document.documentElement.classList.add('sl-theme-dark');"
+/>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
+
+<html>
+    <body>
+        <sl-card style="display:flex;justify-content:center" class="card-basic">
+        ### TODO LIST ###
+        - Fill out Overview
+        - Fill out holster pages with relevant information.
+        - Fill out encounter guides with text, images, and raidplans (any toolboxes will be removed/ignored. Please use <a href="https://raidplan.io/ffxiv" target="_blank">raidplan.io</a>)
+        </sl-card>
+
+        <sl-card style="display:flex;justify-content:center" class="card-basic">
+        ### What is Delubrum Reginae Savage? ###
+        ur mom
+        </sl-card>
+    </body>
+</html>
