--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -4,3 +4,22 @@ description: one stop shop for all things NA Delubrum Savage
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
+
+<link
+  rel="stylesheet"
+  media="(prefers-color-scheme:dark)"
+  href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
+  onload="document.documentElement.classList.add('sl-theme-dark');"
+/>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
+
+<html class="sl-theme-dark">
+    <body>
+    <div class="index-content">
+        <sl-card style="display:flex;justify-content:center" class="card-basic">
+            <p>This website was created to be an easy to access library of all the current Foray related information in the NA FFXIV Community. Currently only Delubrum Savage is 
+            supported and being maintained. Once the Dawntrail field operation comes out, it will be slowly updated with content and strats as they appear.</p>
+        </sl-card>
+    </div>
+    </body>
+ </html>
