--- a/src/content/docs/others/credits.mdx
+++ b/src/content/docs/others/credits.mdx
@@ -3,4 +3,20 @@ title: Credits
 description: Credits to people who contributed and inspired this project
 ---
 
-Tenkay for making ultistrats.com in turn making me want to create this resource
+<link
+  rel="stylesheet"
+  media="(prefers-color-scheme:dark)"
+  href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
+  onload="document.documentElement.classList.add('sl-theme-dark');"
+/>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
+
+<html>
+    <body>
+        <sl-card style="display:flex;justify-content:center" class="card-basic">
+        ### Thank you to... ###
+        - Tenkay for making <a href="https://ultistrats.com" target="_blank">ultistrats.com</a> in turn making me want to create this resource
+        - O'palt Jhaid for providing most of the resources, images, and text on the site.
+        </sl-card>
+    </body>
+</html>
