Started filled out pages, added discords/credits, began to fill in some DRS stuff

--- a/src/content/docs/drs/overview.mdx
+++ b/src/content/docs/drs/overview.mdx
@@ -11,18 +11,16 @@ description: PeepoPoggers
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
-<html>
-    <body>
-        <sl-card style="display:flex;justify-content:center" class="card-basic">
-        ### TODO LIST ###
-        - Fill out Overview
-        - Fill out holster pages with relevant information.
-        - Fill out encounter guides with text, images, and raidplans (any toolboxes will be removed/ignored. Please use <a href="https://raidplan.io/ffxiv" target="_blank">raidplan.io</a>)
-        </sl-card>
+### What is Delubrum Reginae Savage? ###
+Delubrum Reginae (Savage) is a difficult large-scale 24-48 person raid that came out during the Shadowbringers expansion. This raid acted as the Bozja equivalent to Baldesian Arsenal.
+Inside you will face off against 4 enraging fights with some simpler trash fights inbetween each. 
 
-        <sl-card style="display:flex;justify-content:center" class="card-basic">
-        ### What is Delubrum Reginae Savage? ###
-        ur mom
-        </sl-card>
-    </body>
-</html>
+You will be expected to be using Lost Actions and Pure Essences as they are vital to clearing
+the raid.
+
+<br></br>
+:::tip[Reccomended Studying]
+If you are short on time, these pages contain the most important information to read.
+- <a href="/drs/actions">Lost Action Basics</a>
+- <a href="/drs/guides/avowed">Trinity Avowed</a>
+:::
