--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: NA Field Operations
-description: one stop shop for all things NA Delubrum Savage
+description: Large-Scale Raid Library
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
@@ -20,6 +20,13 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
             <p>This website was created to be an easy to access library of all the current Foray related information in the NA FFXIV Community. Currently only Delubrum Savage is 
             supported and being maintained. Once the Dawntrail field operation comes out, it will be slowly updated with content and strats as they appear.</p>
         </sl-card>
+        <h2 style="display:flex;justify-content:center">Field Operations</h2>
+        <div style="display:flex;justify-content:center" class="multi-button">
+            <div>
+                <button onclick="location.href='/drs/overview'">Delubrum (Savage)</button>
+                <button onclick="location.href='/triangle/overview'">Shade's Triangle</button>
+            </div>
+        </div>
     </div>
     </body>
  </html>
