--- a/src/content/docs/others/credits.mdx
+++ b/src/content/docs/others/credits.mdx
@@ -11,12 +11,9 @@ description: Credits to people who contributed and inspired this project
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
-<html>
-    <body>
-        <sl-card style="display:flex;justify-content:center" class="card-basic">
-        ### Thank you to... ###
-        - Tenkay for making <a href="https://ultistrats.com" target="_blank">ultistrats.com</a> in turn making me want to create this resource
-        - O'palt Jhaid for providing most of the resources, images, and text on the site.
-        </sl-card>
-    </body>
-</html>
+
+### Thank you to... ###
+- Tenkay for making <a href="https://ultistrats.com" target="_blank">ultistrats.com</a> in turn making me want to create this resource.
+  - Also allowing me to basically rip ultistrats off :^\)
+- O'palt Jhaid for providing most of the resources, images, and text on the site.
+- Celery for making <a href="https://bozja.net" target="_blank">bozja.net</a> and compiling a ton useful of Bozja/Zadnor resources into one place.
