--- a/src/content/docs/others/discords.mdx
+++ b/src/content/docs/others/discords.mdx
@@ -3,9 +3,22 @@ title: Discords
 description: Reccomended Discords for engaging with Field Operations content
 ---
 
-pebe
-thl
-cafe
-cem
-abba
-dfo
+### Primal ###
+    - <a href="https://discord.gg/pebe" target="_blank">Primal Eureka/Bozja Enjoyers</a> - All Forays
+    - <a href="https://discord.gg/thehelplines" target="_blank">The Help Lines</a> - BA focused, sometimes runs DRS
+
+### Crystal ###
+    - <a href="https://discord.gg/c-a-f-e" target="_blank">Crystalline Adventuring Forays and Expeditions</a> - All Field Operations
+    - <a href="https://discord.gg/cem" target="_blank">Crystal Exploratory Missions</a> - DRS/Bozja focused
+
+### Aether ###
+    - <a href="https://discord.gg/abbaffxiv" target="_blank">Aether Bozja/Baldesian Arsenal</a> - All Field Operations
+
+### Dynamis ###
+    - <a href="https://discord.gg/vjwYEeubeN" target="_blank">Dynamis Field Operations</a> - All Field Operations
+<br></br>
+
+:::note[Want to get your Discord here?]
+    - DM me on Discord @ **onlymlems**! I'll try to respond as soon as possible.
+    - Please include a link to your Discord server and what data center it's based out of.
+:::
