--- a/src/content/docs/drs/overview.mdx
+++ b/src/content/docs/drs/overview.mdx
@@ -12,11 +12,11 @@ description: PeepoPoggers
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
 ### What is Delubrum Reginae Savage? ###
-Delubrum Reginae (Savage) is a difficult large-scale 24-48 person raid that came out during the Shadowbringers expansion. This raid acted as the Bozja equivalent to Baldesian Arsenal.
-Inside you will face off against 4 enraging fights with some simpler trash fights inbetween each. 
+Delubrum Reginae (Savage) is a difficult large-scale 24-48 person raid that acts as the Shadowbringers' equivalent to Baldesion Arsenal.
+Inside you will face off against 4 enraging bosses with some simpler fights between them. 
 
 You will be expected to be using Lost Actions and Pure Essences as they are vital to clearing
-the raid.
+the raid. Not bringing the proper actions, essences, and reraisers will often result in you being kicked from the current run.
 
 <br></br>
 :::tip[Reccomended Studying]
