--- a/src/content/docs/others/credits.mdx
+++ b/src/content/docs/others/credits.mdx
@@ -16,4 +16,5 @@ description: Credits to people who contributed and inspired this project
 - Tenkay for making <a href="https://ultistrats.com" target="_blank">ultistrats.com</a> in turn making me want to create this resource.
   - Also allowing me to basically rip ultistrats off :^\)
 - O'palt Jhaid for providing most of the resources, images, and text on the site.
+- Carter Valentine for writing and providing a ton of resources in the DRS section
 - Celery for making <a href="https://bozja.net" target="_blank">bozja.net</a> and compiling a ton useful of Bozja/Zadnor resources into one place.
