--- a/src/content/docs/drs/overview.mdx
+++ b/src/content/docs/drs/overview.mdx
@@ -3,6 +3,8 @@ title: Delubrum Savage Overview
 description: PeepoPoggers
 ---
 
+import Footer from '@components/Footer.astro'
+
 <link
   rel="stylesheet"
   media="(prefers-color-scheme:dark)"
@@ -24,3 +26,5 @@ If you are short on time, these pages contain the most important information to 
 - <a href="/drs/actions">Lost Action Basics</a>
 - <a href="/drs/guides/avowed">Trinity Avowed</a>
 :::
+
+<Footer/>
