--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -4,6 +4,7 @@ description: Large-Scale Raid Library
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
+import Footer from "@components/Footer.astro";
 
 <link
   rel="stylesheet"
@@ -28,5 +29,6 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
             </div>
         </div>
     </div>
+    <Footer/>
     </body>
  </html>
