--- a/src/content/docs/others/credits.mdx
+++ b/src/content/docs/others/credits.mdx
@@ -3,6 +3,8 @@ title: Credits
 description: Credits to people who contributed and inspired this project
 ---
 
+import Footer from '@components/Footer.astro'
+
 <link
   rel="stylesheet"
   media="(prefers-color-scheme:dark)"
@@ -18,3 +20,5 @@ description: Credits to people who contributed and inspired this project
 - O'palt Jhaid for providing most of the resources, images, and text on the site.
 - Carter Valentine for writing and providing a ton of resources in the DRS section
 - Celery for making <a href="https://bozja.net" target="_blank">bozja.net</a> and compiling a ton useful of Bozja/Zadnor resources into one place.
+
+<Footer />
