--- a/src/content/docs/others/discords.mdx
+++ b/src/content/docs/others/discords.mdx
@@ -3,6 +3,16 @@ title: Discords
 description: Reccomended Discords for engaging with Field Operations content
 ---
 
+import Footer from "@components/Footer.astro";
+
+<link
+  rel="stylesheet"
+  media="(prefers-color-scheme:dark)"
+  href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
+  onload="document.documentElement.classList.add('sl-theme-dark');"
+/>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
+
 ### Primal ###
     - <a href="https://discord.gg/pebe" target="_blank">Primal Eureka/Bozja Enjoyers</a> - All Forays
     - <a href="https://discord.gg/thehelplines" target="_blank">The Help Lines</a> - BA focused, sometimes runs DRS
@@ -22,3 +32,7 @@ description: Reccomended Discords for engaging with Field Operations content
     - DM me on Discord @ **onlymlems**! I'll try to respond as soon as possible.
     - Please include a link to your Discord server and what data center it's based out of.
 :::
+<Footer />
+
+
+
