--- a/src/content/docs/drs/hosting.mdx
+++ b/src/content/docs/drs/hosting.mdx
@@ -3,6 +3,8 @@ title: Host Resources
 description: Hosting is fun!
 ---
 
+import Footer from '@components/Footer.astro'
+
 <link
   rel="stylesheet"
   media="(prefers-color-scheme:dark)"
@@ -142,4 +144,6 @@ If you need to do Lowman Organization here is how you should assign people:
     - Prefer to get a solo Pure Invuln tank that knows the Blood Rage invuln trick or has Font of Skill in their holster
     - Otherwise have 3 Tanks w/ Pure Invuln take the busters
     - If not enough pure invuln tanks, assign 3 tanks to invuln the buster and have healer(s) be ready to esuna doom off of the tanks without a pure invuln and have the next tank provoke after the current tank takes both hits.
+
+<Footer />
 </html>
