--- a/src/content/docs/triangle/overview.mdx
+++ b/src/content/docs/triangle/overview.mdx
@@ -6,6 +6,20 @@ description: Reccomended Discords for engaging with Field Operations content
 import { Aside } from '@astrojs/starlight/components';
 import { Icon } from '@astrojs/starlight/components';
 import { Image } from 'astro:assets';
+import Footer from '@components/Footer.astro'
 
-ITS CONFIRMEEEEDDDDDDDDDDDDDDDDDDDD
-<Image alt="Shade's Triangle" loading="eager" width="785" height="450" src="/triangle.png"/>
+
+<link
+  rel="stylesheet"
+  media="(prefers-color-scheme:dark)"
+  href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
+  onload="document.documentElement.classList.add('sl-theme-dark');"
+/>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
+<html>
+    <body>
+        ITS CONFIRMEEEEDDDDDDDDDDDDDDDDDDDD
+        <Image alt="Shade's Triangle" loading="eager" width="785" height="450" src="/triangle.png"/>
+        <Footer />
+    </body>
+</html>
