Added thumbnail, prototype melee actions page, lots more

--- a/src/content/docs/drs/overview.mdx
+++ b/src/content/docs/drs/overview.mdx
@@ -3,6 +3,7 @@ title: Delubrum Savage Overview
 description: PeepoPoggers
 ---
 
+import { Image } from 'astro:assets';
 import Footer from '@components/Footer.astro'
 
 <link
@@ -13,17 +14,21 @@ import Footer from '@components/Footer.astro'
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
-### What is Delubrum Reginae Savage? ###
+<Image alt="drs thumbnail" loading="eager" width="600" height="300" class="ulti-tooltip" src="/drs/thumbnail.png"/>
+
+### What is Delubrum Reginae (Savage)? ###
 Delubrum Reginae (Savage) is a difficult large-scale 24-48 person raid that acts as the Shadowbringers' equivalent to Baldesion Arsenal.
 Inside you will face off against 4 enraging bosses with some simpler fights between them. 
 
 You will be expected to be using Lost Actions and Pure Essences as they are vital to clearing
-the raid. Not bringing the proper actions, essences, and reraisers will often result in you being kicked from the current run.
+the raid. Not bringing the proper actions, essences, and reraisers will often result in you being removed from the current run.
+<br/><hr/>
 
-<br></br>
-:::tip[Reccomended Studying]
-If you are short on time, these pages contain the most important information to read.
+Please refer to the sidebar on the left for everything you need to know to be prepared for a full run of Delubrum Reginae (Savage).
+:::note[Reccomended Studying]
+If you are short on time, these pages contain the most important information to read and understand.
 - <a href="/drs/actions">Lost Action Basics</a>
+- Holster for your choice of role(s).
 - <a href="/drs/guides/avowed">Trinity Avowed</a>
 :::
 
