--- a/src/content/docs/drs/holsters/melee.mdx
+++ b/src/content/docs/drs/holsters/melee.mdx
@@ -3,4 +3,256 @@ title: Melee Holsters
 description: The worst boss ever
 ---
 
-WIP
+import ActionIcon from '@components/ActionIcon.astro'
+import { Image } from 'astro:assets';
+import Footer from "@components/Footer.astro";
+
+<link
+  rel="stylesheet"
+  media="(prefers-color-scheme:dark)"
+  href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
+  onload="document.documentElement.classList.add('sl-theme-dark');"
+/>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
+
+
+    Melee DPS are the powerhouses of Delubrum Reginae. Along with being some of the highest DPS roles, they are given arguably the strongest (and easiest) to use actions.
+    Both actions should be combined together every 2 minute window to maximize their effectiveness. 
+    <br/><hr/>
+
+### Basic Melee DPS Holster
+<table class="holster-table">
+    <col width="75px" />
+    <col width="300px" />
+    <col width="65px" />
+    <col width="65px" />
+  <tr>
+    <th style="border: none; background-color: transparent; visibility: hidden;"/>
+    <th>Lost Action</th>
+    <th>Qty.</th>
+    <th>Wt.</th>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/fop.png"/></td>
+    <td>**Lost Font of Power**</td>
+    <td>1</td>
+    <td>25</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/hsac.png"/></td>
+    <td>**Banner of Honored Sacrifice**</td>
+    <td>1</td>
+    <td>10</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+    <td>**Resistance Reraiser**</td>
+    <td>7</td>
+    <td>56</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+    <td>**Light Curtain**</td>
+    <td>2</td>
+    <td>2</td>
+  </tr>
+  <tr style="background-color: transparent">
+    <td style="border: none;"/>
+    <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+    <td>93</td>
+  </tr>
+</table>
+<br/><hr/>
+
+### Basic Rend Armor Holster
+<table class="holster-table">
+    <col width="75px" />
+    <col width="300px" />
+    <col width="65px" />
+    <col width="65px" />
+  <tr>
+    <th style="border: none; background-color: transparent; visibility: hidden;"/>
+    <th>Lost Action</th>
+    <th>Qty.</th>
+    <th>Wt.</th>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/fop.png"/></td>
+    <td>**Lost Font of Power**</td>
+    <td>1</td>
+    <td>25</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/rend.png"/></td>
+    <td>**Banner of Honored Sacrifice**</td>
+    <td>3</td>
+    <td>24</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+    <td>**Resistance Reraiser**</td>
+    <td>6</td>
+    <td>48</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+    <td>**Light Curtain**</td>
+    <td>2</td>
+    <td>2</td>
+  </tr>
+  <tr style="background-color: transparent">
+    <td style="border: none;"/>
+    <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+    <td>99</td>
+  </tr>
+</table>
+:::danger[Lost Rend Armor]
+Two players in the alliance will be assigned to run **Lost Rend Armor**. If assigned, you will replace <ActionIcon icon="hsac"/>**Banner of Honored Sacrifice** with <ActionIcon icon="rend"/>**Lost Rend Armor** and alternate uses with the other assigned rend
+user to maintain 100% buff uptime on the boss(es).
+:::
+<br/><hr/>
+
+### Beginner Mimic Holster
+<table class="holster-table">
+    <col width="75px" />
+    <col width="300px" />
+    <col width="65px" />
+    <col width="65px" />
+  <tr>
+    <th style="border: none; background-color: transparent; visibility: hidden;"/>
+    <th>Lost Action</th>
+    <th>Qty.</th>
+    <th>Wt.</th>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/mimic.png"/></td>
+    <td>**Mimic**</td>
+    <td>2</td>
+    <td>24</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/hsac.png"/></td>
+    <td>**Banner of Honored Sacrifice**</td>
+    <td>2</td>
+    <td>20</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+    <td>**Resistance Reraiser**</td>
+    <td>6</td>
+    <td>48</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+    <td>**Light Curtain**</td>
+    <td>2</td>
+    <td>2</td>
+  </tr>
+  <tr style="background-color: transparent">
+    <td style="border: none;"/>
+    <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+    <td>94</td>
+  </tr>
+</table>
+:::caution[How To Mimic]
+<ActionIcon icon="mimic"/>**Mimic** is used to copy the actions of another player _and_ fully refresh your actions at the same time! To use it, first slot in <ActionIcon icon="mimic"/>**Mimic** and target the player you wish to copy the actions from.
+**Before you use <ActionIcon icon="mimic"/>Mimic**, double check their **Reminiscence** buff! Doing this will ensure you are getting the correct actions. 
+
+Once ready, use <ActionIcon icon="mimic"/>**Mimic!** After a nifty animation, you'll recieve **both** actions the target had and full charges of both!
+:::
+<br/><hr/>
+
+### Excellence Melee
+<table class="holster-table">
+    <col width="75px" />
+    <col width="300px" />
+    <col width="65px" />
+    <col width="65px" />
+  <tr>
+    <th style="border: none; background-color: transparent; visibility: hidden;"/>
+    <th>Lost Action</th>
+    <th>Qty.</th>
+    <th>Wt.</th>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/mimic.png"/></td>
+    <td>**Mimic**</td>
+    <td>3</td>
+    <td>36</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/hsac.png"/></td>
+    <td>**Banner of Honored Sacrifice**</td>
+    <td>4</td>
+    <td>40</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+    <td>**Resistance Reraiser**</td>
+    <td>2</td>
+    <td>16</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+    <td>**Light Curtain**</td>
+    <td>2</td>
+    <td>2</td>
+  </tr>
+  <tr style="background-color: transparent">
+    <td style="border: none;"/>
+    <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+    <td>94</td>
+  </tr>
+</table>
+<br/><hr/>
+
+### Excellence Melee Battery
+<table class="holster-table">
+    <col width="75px" />
+    <col width="300px" />
+    <col width="65px" />
+    <col width="65px" />
+  <tr>
+    <th style="border: none; background-color: transparent; visibility: hidden;"/>
+    <th>Lost Action</th>
+    <th>Qty.</th>
+    <th>Wt.</th>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/mimic.png"/></td>
+    <td>**Mimic**</td>
+    <td>2</td>
+    <td>24</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/excellence.png"/></td>
+    <td>**Lost Excellence**</td>
+    <td>1</td>
+    <td>25</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/hsac.png"/></td>
+    <td>**Banner of Honored Sacrifice**</td>
+    <td>4</td>
+    <td>40</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+    <td>**Resistance Reraiser**</td>
+    <td>1</td>
+    <td>8</td>
+  </tr>
+  <tr>
+    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+    <td>**Light Curtain**</td>
+    <td>2</td>
+    <td>2</td>
+  </tr>
+  <tr style="background-color: transparent">
+    <td style="border: none;"/>
+    <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+    <td>99</td>
+  </tr>
+</table>
+
+<Footer />
