Fixed margins lmao.

--- a/src/content/docs/drs/holsters/melee.mdx
+++ b/src/content/docs/drs/holsters/melee.mdx
@@ -1,6 +1,6 @@
 ---
 title: Melee Holsters
-description: The worst boss ever
+description: Melee DPS go BRRRRR
 ---
 
 import ActionIcon from '@components/ActionIcon.astro'
